--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,12 +3,13 @@ version: '3.9'
 services:
   auth-service:
     build:
-      context: .
-      dockerfile: Dockerfile.base
+      context: ..
+      dockerfile: docker/Dockerfile
     container_name: auth-service
     environment:
       - SERVICE_PORT=8001
       - ENVIRONMENT=local
+      - PYTHONPATH=/app/src
     ports:
       - "8001:8001"
     networks:
@@ -18,8 +19,8 @@ services:
 
   transaction-service:
     build:
-      context: .
-      dockerfile: Dockerfile.base
+      context: ..
+      dockerfile: docker/Dockerfile
     container_name: transaction-service
     environment:
       - SERVICE_PORT=8002
@@ -34,7 +35,7 @@ services:
   postgres:
     image: postgres:12.16-alpine3.18
     container_name: postgres
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: password
@@ -52,7 +53,10 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    environment:
+    - AUTH_SERVICE_PORT=8001  
+    - TRANSACTION_SERVICE_PORT=8002 
     depends_on:
       - auth-service
       - transaction-service
