--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,12 +4,11 @@ services:
   auth-service:
     build:
       context: ..
-      dockerfile: docker/Dockerfile
+      dockerfile: docker/Dockerfile.auth
     container_name: auth-service
     environment:
       - SERVICE_PORT=8001
       - ENVIRONMENT=local
-      - PYTHONPATH=/app/src
     ports:
       - "8001:8001"
     networks:
@@ -20,7 +19,7 @@ services:
   transaction-service:
     build:
       context: ..
-      dockerfile: docker/Dockerfile
+      dockerfile: docker/Dockerfile.transaction
     container_name: transaction-service
     environment:
       - SERVICE_PORT=8002
