--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -11,13 +11,12 @@ http {
     keepalive_timeout  65;
 
     upstream auth_service {
-        server auth-service:8001;  # Использование переменной окружения
+        server auth-service:8001; 
     }
 
     upstream transaction_service {
-        server transaction-service:8002;  # Использование переменной окружения
+        server transaction-service:8002; 
     }
-
     server {
         listen 80;
 
