--- a/alembic.ini
+++ b/alembic.ini
@@ -2,28 +2,29 @@
 
 [alembic]
 # path to migration scripts
-# Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = src/databases/migrations
+script_location = common/databases/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
 # see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
 # for all available tokens
 # file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
-prepend_sys_path = ./src
+prepend_sys_path = ./
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
-# If specified, requires the python>=3.9 or backports.zoneinfo library.
-# Any required deps can installed by adding `alembic[tz]` to the pip requirements
-# string value is passed to ZoneInfo()
+# If specified, requires the python-dateutil library that can be
+# installed by adding `alembic[tz]` to the pip requirements
+# string value is passed to dateutil.tz.gettz()
 # leave blank for localtime
 # timezone =
 
-# max length of characters to apply to the "slug" field
+# max length of characters to apply to the
+# "slug" field
 # truncate_slug_length = 40
 
 # set to 'true' to run the environment during
@@ -49,7 +50,6 @@ prepend_sys_path = ./src
 # version_path_separator = :
 # version_path_separator = ;
 # version_path_separator = space
-# version_path_separator = newline
 version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
 
 # set to 'true' to search source files recursively
@@ -92,12 +92,12 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARNING
+level = WARN
 handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = WARNING
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 
@@ -115,3 +115,4 @@ formatter = generic
 [formatter_generic]
 format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
+
