--- a/.env.template
+++ b/.env.template
@@ -14,7 +14,7 @@ NGINX_PORT=80
 NGINX_HOST=localhost
 
 # ===== PostgreSQL =====
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=password
