--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,7 +40,9 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: main_db
     ports:
-      - 5432:5432
+      - 5433:5432
+    expose:
+      - "5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
